--- a/Main.html
+++ b/Main.html
@@ -11,11 +11,11 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
   />
-  <link rel="icon"  type="image/x-icon" href="image/emui.png">
+  <link rel="icon"  type="image/x-icon" href="./image/emui.png">
 
 
-    <link rel="stylesheet" href="/css/design.css">
-    <link rel="stylesheet" href="/css/ui.css">
+    <link rel="stylesheet" href="./css/design.css">
+    <link rel="stylesheet" href="./css/ui.css">
 
 </head>
 <body id="body">
@@ -70,7 +70,7 @@
             <p class="descriptionfront" style="color: white;">I am a <b>Full Stack Developer</b>!!!</p>
           </div>
           <div class="col">
-            <img src="/image/user.png" style="float: right;"class="img-fluid" alt="..." width="700px">
+            <img src="./image/user.png" style="float: right;"class="img-fluid" alt="..." width="700px">
           </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
               <div class="col">
               <div class="card h-100">
-            <img src="/image/boot.png" class="card-img-top" alt="...">
+            <img src="./image/boot.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Spring Boot Project</h5><br>
               <p class="card-text"> Name: School Library System<br>Technology Used: Spring Boot/Web<br>Language Used: Java<br></p>
@@ -104,7 +104,7 @@
         </div>
         <div class="col">
           <div class="card h-100 ">
-            <img src="/image/java.png" class="card-img-top" alt="...">
+            <img src="./image/java.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Java Project</h5><br>
               <p class="card-text">Name: Hotel Booking System<br>Language Used: Java<br></p>
@@ -116,7 +116,7 @@
         </div>
         <div class="col">
           <div class="card h-100 ">
-            <img src="/image/ms.png" class="card-img-top" alt="...">
+            <img src="./image/ms.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Microservice</h5><br>
               <p class="card-text">Name: Railway Ticket Booking<br>Technology Used: Spring Boot/Web<br>Language Used: Java<br></p>
@@ -139,34 +139,34 @@
   <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3 p-3 ;
   ">
      <div class="cols">
-      <img src="/image/java.png" class="card-img " alt="...">
+      <img src="./image/java.png" class="card-img " alt="...">
     </div>
     <div class="cols">
-      <img src="/image/anstd.png" class="card-img" alt="...">
+      <img src="./image/anstd.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/ps.png" class="card-img" alt="...">
+      <img src="./image/ps.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/vs.png" class="card-img" alt="...">
+      <img src="./image/vs.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/sql.png" class="card-img" alt="...">
+      <img src="./image/sql.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/html.png" class="card-img" alt="...">
+      <img src="./image/html.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/css.png" class="card-img" alt="...">
+      <img src="./image/css.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/js.png" class="card-img" alt="...">
+      <img src="./image/js.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/react.png" class="card-img" alt="...">
+      <img src="./image/react.png" class="card-img" alt="...">
     </div>
     <div class="cols">
-      <img src="/image/doc.png" class="card-img" alt="...">
+      <img src="./image/doc.png" class="card-img" alt="...">
     </div>
   </div>
 </div>
@@ -178,7 +178,7 @@
 
   <div class="row" style="background-color: rgba(255, 255, 255, 0.039);border-radius: 50px;">
     <div class="col">
-      <img src="/image/contact.png" class="img-fluid" alt="..." width="400px">
+      <img src="./image/contact.png" class="img-fluid" alt="..." width="400px">
     </div>
     <div class="col">
       <form id="contactus">
@@ -205,16 +205,16 @@
   </div>
     <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3" style="margin-top: -15%;">
       <div class="col ">
-        <a href="https://www.facebook.com/aniket.kumar.33" target="_blank"><img src="/image/facebook.png" class="connect-img"></a>
+        <a href="https://www.facebook.com/aniket.kumar.33" target="_blank"><img src="./image/facebook.png" class="connect-img"></a>
       </div>
       <div class="col">
-        <a href="https://www.instagram.com/aniket_dev404/" target="_blank"> <img src="/image/instagram.png" class="connect-img" ></a>
+        <a href="https://www.instagram.com/aniket_dev404/" target="_blank"> <img src="./image/instagram.png" class="connect-img" ></a>
       </div>
       <div class="col">
-        <a href="https://www.linkedin.com/in/aniket-kumar-4b183659" target="_blank"><img src="/image/linkedin.png" class="connect-img" ></a>
+        <a href="https://www.linkedin.com/in/aniket-kumar-4b183659" target="_blank"><img src="./image/linkedin.png" class="connect-img" ></a>
       </div>
       <div class="col">
-        <a href="https://www.huaweiemuithemes.com" target="_blank"><img src="/image/website.png" class="connect-img" ></a>
+        <a href="https://www.huaweiemuithemes.com" target="_blank"><img src="./image/website.png" class="connect-img" ></a>
       </div>
     </div>
   </div>
@@ -238,7 +238,7 @@
  
 </div>
     
-    <script src="/js/validator.js"></script>
+    <script src="./js/validator.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
